# subsumption_semantics

./: .gitignore  README.md  pyproject.toml
examples/: basic_example.py  scoring_example.py
notebooks/: Untitled.ipynb
subsumption_semantics/: pipeline_components.py  scoring_functions.py  similarity_metrics.py
